# evalobility

./: .env.example  .gitignore  LICENSE  README.md  agent.py  agent_config.py  eval_output.py  eval_simple.py  eval_tool.py  kb_agent_comparison.ipynb  kb_agent_dataset.csv  kb_agent_dataset_v2.csv  knowledge_base_agent.py  main.py  pyproject.toml
policies/: 01_Privacy_Policy.md  02_Data_Protection_and_PII_Handling.md  03_Terms_of_Service.md  04_Information_Security_Policy.md  05_Access_Control_and_Identity_Management.md  06_Password_and_Authentication_Policy.md  07_Incident_Response_Policy.md  08_Business_Continuity_and_Disaster_Recovery.md  09_Vulnerability_and_Patch_Management.md  10_Secure_SDLC_and_Change_Management.md  11_Third_Party_and_Vendor_Risk_Management.md  12_Cloud_Security_and_Configuration_Baseline.md  13_API_Usage_and_Integration_Security.md  14_Network_Security_and_Segmentation.md  15_Endpoint_BYOD_and_Mobile_Device.md  16_Remote_Work_and_Telecommuting.md  17_Physical_Security_and_Office_Access.md  18_Payment_Processing_and_PCI_Alignment.md  19_KYC_AML_and_Fraud_Prevention.md  19_KYC_AML_and_Fraud_Prevention.md.metadata.json  20_Tax_PAN_VAT_and_Regulatory_Compliance.md
