[project]
name = "evalobility"
version = "0.1.0"
description = "evalobility: wwktm ai conf 2026"
readme = "README.md"
authors = [
    { name = "Saugat Acharya", email = "mesaugat@gmail.com" },
]
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.17",
    "botocore>=1.42.17",
    "ddtrace>=4.1.1",
    "dotenv>=0.9.9",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "strands-agents>=1.20.0",
    "strands-agents-tools>=0.2.18",
    "strands-agents-evals>=0.1.1",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
]
